# routes/api.php
@@ -2,6 +2,9 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
+use App\Http\Controllers\CartController;
+use App\Http\Controllers\UserController;
+use App\Http\Controllers\ProductController;
 
 /*
 |--------------------------------------------------------------------------
@@ -17,3 +20,16 @@ use Illuminate\Support\Facades\Route;
 Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
+
+// Cart
+Route::get('carts', [CartController::class, 'show_user_cart']);
+Route::post('carts/add', [CartController::class, 'add_to_cart']);
+Route::put('carts/update', [CartController::class, 'update_cart']);
+Route::delete('carts', [CartController::class, 'remove_from_cart']);
+Route::patch('carts/checkout', [CartController::class, 'checkout']);
+
+// Product
+Route::get('products', [ProductController::class, 'index']);
+
+// User
+Route::get('users', [UserController::class, 'index']);
