# routes/web.php
@@ -1,7 +1,6 @@
 <?php
 
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\CartController;
 
 /*
 |--------------------------------------------------------------------------
@@ -17,5 +16,3 @@ use App\Http\Controllers\CartController;
 Route::get('/', function () {
     return redirect('api/documentation');
 });
-
-Route::resource('carts', 'CartController');
